--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "vue": "^2.6.11",
     "vue-loader": "^15.9.3",
     "vue-router": "^3.3.4",
-    "vue-template-compiler": "^2.6.11"
+    "vue-template-compiler": "^2.6.11",
     "vue-tree-chart": "^1.2.9"
 
   },
