--- a/package.json
+++ b/package.json
@@ -12,9 +12,7 @@
     "vue": "^2.6.11",
     "vue-loader": "^15.9.3",
     "vue-organization-chart": "^1.1.6",
-    "vue-orgchart": "^1.1.7",
-    "vue-router": "^3.3.4",
-    "vue-tree-chart": "^1.2.9"
+    "vue-router": "^3.3.4"
   },
   "version": "0.1.0",
   "devDependencies": {
